--- a/MasterPage.master
+++ b/MasterPage.master
@@ -232,6 +232,8 @@
     
             </div>
 
+            <div style="height:100px"></div>
+
             <div class="w3agile_footer_copy">
                 <p>Copyright &copy; 2017. Movie Expert All rights reserved.</p>
             </div>
