--- a/MasterPage.master
+++ b/MasterPage.master
@@ -1,12 +1,10 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="MasterPage.master.cs" Inherits="MasterPage" %>
     <!DOCTYPE html>
-    <html xmlns="http://www.w3.org/1999/xhtml">        
+    <html xmlns="http://www.w3.org/1999/xhtml">
+        
         <head runat="server">
             <title></title>
-
-            <asp:ContentPlaceHolder ID="ContentPlaceHolderHeader" runat="server">
-                </asp:ContentPlaceHolder>
-
+            <asp:ContentPlaceHolder ID="ContentPlaceHolderHeader" runat="server"></asp:ContentPlaceHolder>
             <meta name="viewport" content="width=device-width, initial-scale=1" />
             <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
             <meta name="" />
@@ -34,6 +32,8 @@
             <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css' /></head>
         
         <body style="font-family: 'Microsoft YaHei'">
+           
+
             
             <div id="demo-1" class="banner-inner">
                 <div class="banner-inner-dott">
@@ -120,15 +120,9 @@
                                         </li>
                                         <!-- 恢复 -->
                                         <li>
-                                            <a runat ="server" id ="Username" onmouseover ="False" onfocus ="false"></a>
-                                            <%--<asp:TextBox ID ="Username" runat ="server">
-
-                                            </asp:TextBox>--%>
-
-                                                
-                                           <!-- <a href="series.html">User</a> -->
-                                                </li>
-                                </div>
+                                            <a runat="server" id="Username" onmouseover="False" onfocus="false"><%# getUserNameText() %></a>
+                                            <%--<asp:TextBox ID="Username" runat="server"></asp:TextBox>--%>
+                                                <!-- <a href="series.html">User</a> --></li></div>
                                 <div class="clearfix"></div>
                             </nav>
                             <div class="w3ls_search">
@@ -157,22 +151,24 @@
                 <div class="w3_agilits_inner_bottom">
                     <div class="col-md-6 wthree_agile_login">
                         <ul>
-                            <!-- <li><i class="fa fa-phone" aria-hidden="true"></i> (+000) 009 455 4088</li> -->
-                            <li>
-                                <asp:HyperLink ID="LoginButton" runat="server" 
-                                     href="#" class="login" data-toggle="modal" data-target="#myModal4">Login</asp:HyperLink></li>
-                            <li>
-                                <asp:HyperLink ID="RegisterButton" runat="server"  
-                                    href="#" class="login reg" data-toggle="modal" data-target="#myModal5">Register</asp:HyperLink>
-
-                            </li>
+                            <li><a href="<%# getLoginButtonUrl() %>" class="login"  data-toggle="modal" data-target="<%# getLoginButtonDataTarget() %>"><%# getLoginButtonText() %></a></li>
+							<li><a href="<%# getRegisterButtonUrl() %>" class="login reg"  data-toggle="modal" data-target="<%# getRegisterButtonTarget() %>"><%# getRegisterButtonText() %></a></li>
                         </ul>
                     </div>
                     <div class="col-md-6 wthree_share_agile"></div>
                 </div>
             </div>
+
+
+
+
+
+
+
+
             <!--//banner-bottom-->
             <!-- Modal1 -->
+            <!-- 登录 -->
             <div class="modal fade" id="myModal4" tabindex="-1" role="dialog">
                 <div class="modal-dialog">
                     <!-- Modal content-->
@@ -181,23 +177,17 @@
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                             <h4>Login</h4>
                             <div class="login-form">
-                                <form action="#" method="post">
-                                    <input type="email" name="email" placeholder="E-mail" required="" runat ="server" id ="EmailBox1"/>
-                                    <input type="password" name="password" placeholder="Password" required="" runat ="server" id ="PasswordBox1"/>
+                                <form action="?action=login" method="post">
+                                    <input type="email" name="email" placeholder="E-mail" required="" />
+                                    <input type="password" name="password" placeholder="Password" required="" />
                                     <div class="tp">
-                                       <!-- <input type="submit" value="LOGIN NOW" onclick="BtnLogin_Click"> -->
+                                        <input type="submit" value="LOGIN NOW"  />
                                         
-                                        <form runat ="server">
-
-                                         <asp:Button ID="ImageButton2" runat="server" Text ="LOGIN NOW" 
-                                         onclick="BtnLogin_Click" /> 
-                                            </form>
-                                           
                                     </div>
                                     <div class="forgot-grid">
                                         <div class="log-check">
                                             <label class="checkbox">
-                                                <input type="checkbox" name="checkbox">Remember me</label></div>
+                                                <input type="checkbox" name="checkbox"/>Remember me</label></div>
                                         <div class="forgot">
                                             <a href="#" data-toggle="modal" data-target="#myModal2">Forgot Password?</a></div>
                                         <div class="clearfix"></div>
@@ -208,8 +198,12 @@
                     </div>
                 </div>
             </div>
+
+
+
             <!-- //Modal1 -->
             <!-- Modal1 -->
+            <!--注册-->
             <div class="modal fade" id="myModal5" tabindex="-1" role="dialog">
                 <div class="modal-dialog">
                     <!-- Modal content-->
@@ -218,7 +212,7 @@
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                             <h4>Register</h4>
                             <div class="login-form">
-                                <form action="#" method="post">
+                                <form action="?action=register" method="post">
                                     <input type="text" name="name" placeholder="Name" required="" />
                                     <input type="email" name="email" placeholder="E-mail" required="" />
                                     <input type="password" name="password" placeholder="Password" required="" />
@@ -226,7 +220,7 @@
                                     <div class="signin-rit">
                                         <span class="agree-checkbox">
                                             <label class="checkbox">
-                                                <input type="checkbox" name="checkbox">I agree to your
+                                                <input type="checkbox" name="checkbox"/>I agree to your
                                                 <a class="w3layouts-t" href="#" target="_blank">Terms of Use</a>and
                                                 <a class="w3layouts-t" href="#" target="_blank">Privacy Policy</a></label>
                                         </span>
@@ -246,22 +240,12 @@
                 <ul>
                 <li><a href="index.html">Home</a><i>//</i></li>
                 <li>Single</li></ul></div> --></div>
-
-            
-
             <div id="content" style="margin-top:50px;margin-bottom:50px;">
-    
-                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-                </asp:ContentPlaceHolder>
-    
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server"></asp:ContentPlaceHolder>
             </div>
-
-            
-
             <div class="w3agile_footer_copy">
                 <p>Copyright &copy; 2017. Movie Expert All rights reserved.</p>
             </div>
-
             <a href="#home" id="toTop" class="scroll" style="display: block; left: 1101px;">
                 <span id="toTopHover" style="opacity: 1;"></span>
             </a>
@@ -399,7 +383,7 @@
                 });</script>
             <!--end-smooth-scrolling-->
             <script src="js/bootstrap.js"></script>
-                
+
         </body>
     
     </html>
