--- a/MasterPage.master
+++ b/MasterPage.master
@@ -24,6 +24,9 @@
             <link href="css/easy-responsive-tabs.css" rel='stylesheet' type='text/css' />
             <link rel="stylesheet" type="text/css" href="css/zoomslider.css" />
             <link rel="stylesheet" type="text/css" href="css/style.css" />
+            <link rel="stylesheet" type="text/css" href="css/table-style.css" />
+            <link rel="stylesheet" type="text/css" href="css/basictable.css" />
+            <link rel="stylesheet" href="css/list.css" type="text/css" media="all" />
             <link href="css/font-awesome.css" rel="stylesheet" />
             <script type="text/javascript" src="js/modernizr-2.6.2.min.js"></script>
             <!--/web-fonts-->
@@ -136,8 +139,8 @@
                                     </ul>
                                     <!-- cd-header-buttons --></div>
                                 <div id="cd-search" class="cd-search">
-                                    <form action="#" method="post">
-                                        <input name="Search" type="search" placeholder="Search..."></form>
+                                    <form action="?action=search" method="post">
+                                        <input name="Search" type="search" placeholder="Search..."/></form>
                                 </div>
                             </div>
                         </div>
