--- a/MasterPage.master
+++ b/MasterPage.master
@@ -56,7 +56,7 @@
                                         <span class="icon-bar"></span>
                                     </button>
                                     <h1>
-                                        <a href="index.html">
+                                        <a href="Index">
                                             <span>M</span>ovies
                                             <span>P</span>ro</a></h1>
                                 </div>
@@ -64,7 +64,7 @@
                                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                     <ul class="nav navbar-nav">
                                         <li class="active">
-                                            <a href="index.html">Home</a></li>
+                                            <a href="Index">Home</a></li>
                                         <li class="dropdown">
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Genre
                                                 <b class="caret"></b></a>
