--- a/MasterPage.master
+++ b/MasterPage.master
@@ -70,43 +70,7 @@
                                                 <b class="caret"></b></a>
                                             <ul class="dropdown-menu multi-column columns-3">
                                                 <li>
-                                                    <!-- 恢复 -->
-                                                    <div class="col-sm-4">
-                                                        <ul class="multi-column-dropdown">
-                                                            <%# getMovieTypeHtmls() %>
-                                                           
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-sm-4">
-                                                        <ul class="multi-column-dropdown">
-                                                            <%--<li>
-                                                                <a href="genre.html">Adventure</a></li>
-                                                            <li>
-                                                                <a href="comedy.html">Comedy</a></li>
-                                                            <li>
-                                                                <a href="genre.html">Documentary</a></li>
-                                                            <li>
-                                                                <a href="genre.html">Fantasy</a></li>
-                                                            <li>
-                                                                <a href="genre.html">Thriller</a></li>--%>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-sm-4">
-                                                        <ul class="multi-column-dropdown">
-                                                           <%-- <li>
-                                                                <a href="genre.html">Animation</a></li>
-                                                            <li>
-                                                                <a href="genre.html">Costume</a></li>
-                                                            <li>
-                                                                <a href="genre.html">Drama</a></li>
-                                                            <li>
-                                                                <a href="genre.html">History</a></li>
-                                                            <li>
-                                                                <a href="genre.html">Musical</a></li>
-                                                            <li>
-                                                                <a href="genre.html">Psychological</a></li>--%>
-                                                        </ul>
-                                                    </div>
+                                                     <%# getGenreHtmls() %>
                                                     <div class="clearfix"></div>
                                                 </li>
                                             </ul>
