--- a/MasterPage.master
+++ b/MasterPage.master
@@ -164,15 +164,8 @@
                                     <input type="text" name="name" placeholder="Name" required="" />
                                     <input type="email" name="email" placeholder="E-mail" required="" />
                                     <input type="password" name="password" placeholder="Password" required="" />
-                                    <input type="password" name="conform password" placeholder="Confirm Password" required="" />
-                                    <div class="signin-rit">
-                                        <span class="agree-checkbox">
-                                            <label class="checkbox">
-                                                <input type="checkbox" name="checkbox"/>I agree to your
-                                                <a class="w3layouts-t" href="#" target="_blank">Terms of Use</a>and
-                                                <a class="w3layouts-t" href="#" target="_blank">Privacy Policy</a></label>
-                                        </span>
-                                    </div>
+                             <!--       <input type="password" name="conform password" placeholder="Confirm Password" required="" /> -->
+                                    
                                     <div class="tp">
                                         <input type="submit" value="REGISTER NOW" /></div>
                                 </form>
